--- a/_notebooks/2022-12-12-lesson8.ipynb
+++ b/_notebooks/2022-12-12-lesson8.ipynb
@@ -40,7 +40,11 @@
     "\n",
     "- These can be used for practical things such as building structures, testing car crashes, and other things before engaging in them in the real world \n",
     "\n",
-    "- These simulations can have the option of obeying real world physics (Gravity, collision) or they can go against these norms since this is a fictitious scenario, and couldn't happen in real life"
+    "- These simulations can have the option of obeying real world physics (Gravity, collision) or they can go against these norms since this is a fictitious scenario, and couldn't happen in real life\n",
+    "\n",
+    "### Notes: \n",
+    "- real world physics don't have to apply in simulations, but can be visualized if needed\n",
+    "- allows people to test what would happen without causing damage"
    ]
   },
   {
@@ -58,8 +62,12 @@
     "- A sports bike company studying design changes to their new bike design \n",
     "\n",
     "\n",
+    "- If you guessed a bike company, you're wrong, because the retail simulation was the right answer. Simulating robots in food service, studying rain impact on vehicles, and new bike design can contribute a lot more to society in comparison to seeing what products sell more than others. \n",
     "\n",
-    "- If you guessed a bike company, you're wrong, because the retail simulation was the right answer. Simulating robots in food service, sudying rain impact on vehicles, and new bike design can contribute a lot more to society in comparison to seeing what products sell more than others. \n"
+    "### Notes:\n",
+    "- retail simulation is more niche??? \n",
+    "- therefore not as useful \n",
+    "- more difficult to simulate a sail"
    ]
   },
   {
@@ -79,7 +87,7 @@
     "\n",
     "\n",
     "\n",
-    "- Potential Saftey was the right answer, because you need somewhere to test the safety and ethicness of what you're about to do before you start building it. Otherwise, let's just say you'll have a special plaque for FBI's Most Wanted\n"
+    "- Potential Safety was the right answer, because you need somewhere to test the safety and ethnics of what you're about to do before you start building it. Otherwise, let's just say you'll have a special plaque for FBI's Most Wanted\n"
    ]
   },
   {
@@ -96,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It will take 1.1693361102674928 seconds for an object that weighs 45 pounds to fall  6.7 meters in a vacuum\n"
+     ]
+    }
+   ],
    "source": [
     "height = float(input(\"height in meters?\"))\n",
     "\n",
@@ -111,9 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n",
+      "7.056\n"
+     ]
+    }
+   ],
    "source": [
     "t = 0\n",
     "g = 0\n",
@@ -150,9 +175,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Man Has Made It Home After  4 Turns\n",
+      "The Man Has Made It Home After  259698 Turns\n",
+      "The Man Has Made It Home After  2 Turns\n",
+      "The Man Has Made It Home After  4 Turns\n",
+      "( 412 724 )\n",
+      "( 441 -259 )\n",
+      "( -787 -1941 )\n",
+      "( -2460 -1278 )\n",
+      "( -3682 -1520 )\n",
+      "( -3482 -418 )\n",
+      "( -3511 -397 )\n",
+      "( -3409 -71 )\n",
+      "( -3239 -667 )\n",
+      "( -2746 -1026 )\n",
+      "Caped\n",
+      "The Man Has Made It Home After  2 Turns\n",
+      "The Man Has Made It Home After  1966 Turns\n",
+      "The Man Has Made It Home After  4 Turns\n",
+      "The Man Has Made It Home After  30 Turns\n",
+      "The Man Has Made It Home After  26 Turns\n",
+      "( 971 167 )\n",
+      "( 404 136 )\n",
+      "( 1547 967 )\n",
+      "( 1532 794 )\n",
+      "( 2161 1057 )\n",
+      "( 925 1009 )\n",
+      "( 710 1788 )\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m step \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     x \u001b[39m=\u001b[39m x\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m step \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     x \u001b[39m=\u001b[39m x\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mif\u001b[39;00m step \u001b[39m==\u001b[39m \u001b[39m2\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "x = 0\n",
@@ -196,9 +266,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 58 -1065 )  |  -443\n",
+      "( 485 -1228 )  |  -885\n",
+      "( 1184 -1577 )  |  -435\n",
+      "( 1468 -1899 )  |  -217\n",
+      "( 1788 -1678 )  |  -182\n",
+      "( 1562 -1935 )  |  17\n",
+      "( 1248 -1967 )  |  205\n",
+      "( 1219 -2557 )  |  1530\n",
+      "( 1344 -2684 )  |  1284\n",
+      "( 1238 -2866 )  |  112\n",
+      "Caped\n",
+      "( -1086 -6 )  |  132\n",
+      "( -1845 -406 )  |  417\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     turns\u001b[39m.\u001b[39mappend(turn)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     turn \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mif\u001b[39;00m turn\u001b[39m/\u001b[39m\u001b[39m1000\u001b[39m \u001b[39m%\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m x \u001b[39m+\u001b[39m y \u001b[39m+\u001b[39m z \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\"\u001b[39m, x,y, \u001b[39m\"\u001b[39m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m| \u001b[39m\u001b[39m\"\u001b[39m, z)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m#Too long Stoper\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "x = 0\n",
@@ -257,7 +358,7 @@
     "\n",
     "Simulations are used extremely frequently in real life applications. One of the most common examples of simulations are video games. A games physics engine can accurately simulate objects colliding \n",
     "\n",
-    "Another example is Blender, the software used in 3d animations class, here at Del Norte. Blender is made up of many small simulations, but one big one it uses is simulating the way light bounces off of and interacts with objects. "
+    "Another example is Blender, the software used in 3d animations class, here at Del Norte. Blender is made up of many small simulations, but one big one it uses is simulating the way light bounces off of and interacts with objects. \n"
    ]
   },
   {
@@ -277,6 +378,77 @@
     "AND\n",
     "\n",
     "Find an example of a simulation in a software/game you use, screenshot, and explain how it is a simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "would you like to be x or o?\n",
+      "you are x\n",
+      "use this as a guide for which location you would like to place your marker at:\n",
+      "['1A', '1B', '1C']\n",
+      "['2A', '2B', '2C']\n",
+      "['3A', '3B', '3C']\n",
+      "\n",
+      "[['1A', '1B', '1C'], ['2A', '2B', '2C'], ['3A', '3B', '3C']]\n",
+      "\n",
+      "current board\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "#player choosing x or o:\n",
+    "print(\"would you like to be x or o?\")\n",
+    "sign_choice = str(input(\"would you like to be x or o?\"))\n",
+    "if sign_choice == \"x\":\n",
+    "    n = \"x\"\n",
+    "    print(\"you are x\")\n",
+    "elif sign_choice == \"o\":\n",
+    "    n = \"o\"\n",
+    "    print(\"you are o\")\n",
+    "else: \n",
+    "    print(\"input not valid\")\n",
+    "\n",
+    "#showing player board locations so that user can pick \n",
+    "board_locations = [[\"1A\", \"1B\", \"1C\"],\n",
+    "                   [\"2A\", \"2B\", \"2C\"],\n",
+    "                   [\"3A\", \"3B\", \"3C\"]]\n",
+    "print(\"use this as a guide for which location you would like to place your marker at:\")\n",
+    "for q in board_locations:\n",
+    "    print(q)\n",
+    "print(\"\")\n",
+    "\n",
+    "\n",
+    "tic_tac_toe = [[0] * 3] * 3 #empty array to track where markers have been placed\n",
+    "available = board_locations\n",
+    "\n",
+    "def current_board():\n",
+    "    print(\"\")\n",
+    "    print(\"current board\")\n",
+    "    for r in tic_tac_toe:\n",
+    "        print(r)\n",
+    "\n",
+    "\n",
+    "current_board()\n",
+    "\n",
+    "def play1():\n",
+    "    print(\"where would you like to place your marker?\")\n",
+    "    chosen_place = str(input())\n",
+    "    for w in available:\n",
+    "        if chosen_place == w:\n",
+    "            \n",
+    "\n"
    ]
   }
  ],
