--- a/_notebooks/2022-12-12-lesson8.ipynb
+++ b/_notebooks/2022-12-12-lesson8.ipynb
@@ -266,26 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 58 -1065 )  |  -443\n",
-      "( 485 -1228 )  |  -885\n",
-      "( 1184 -1577 )  |  -435\n",
-      "( 1468 -1899 )  |  -217\n",
-      "( 1788 -1678 )  |  -182\n",
-      "( 1562 -1935 )  |  17\n",
-      "( 1248 -1967 )  |  205\n",
-      "( 1219 -2557 )  |  1530\n",
-      "( 1344 -2684 )  |  1284\n",
-      "( 1238 -2866 )  |  112\n",
-      "Caped\n",
-      "( -1086 -6 )  |  132\n",
-      "( -1845 -406 )  |  417\n"
+      "( -816 203 )  |  -583\n",
+      "( -1055 -952 )  |  -565\n",
+      "( -1910 -230 )  |  554\n",
+      "( -1559 -413 )  |  -364\n",
+      "( -867 -1264 )  |  -279\n",
+      "( -774 -1330 )  |  192\n",
+      "( -875 -1931 )  |  -154\n"
      ]
     },
     {
@@ -295,7 +289,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     turns\u001b[39m.\u001b[39mappend(turn)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     turn \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mif\u001b[39;00m turn\u001b[39m/\u001b[39m\u001b[39m1000\u001b[39m \u001b[39m%\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m x \u001b[39m+\u001b[39m y \u001b[39m+\u001b[39m z \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\"\u001b[39m, x,y, \u001b[39m\"\u001b[39m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m| \u001b[39m\u001b[39m\"\u001b[39m, z)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m#Too long Stoper\u001b[39;00m\n",
+      "\u001b[1;32m/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     turns\u001b[39m.\u001b[39mappend(turn)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     turn \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mif\u001b[39;00m turn\u001b[39m/\u001b[39;49m\u001b[39m1000\u001b[39;49m \u001b[39m%\u001b[39;49m \u001b[39m1000\u001b[39;49m \u001b[39m==\u001b[39;49m \u001b[39m0\u001b[39;49m \u001b[39mand\u001b[39;00m x \u001b[39m+\u001b[39m y \u001b[39m+\u001b[39m z \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\"\u001b[39m, x,y, \u001b[39m\"\u001b[39m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m| \u001b[39m\u001b[39m\"\u001b[39m, z)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ekamjotkaire/csp/fast-pages/_notebooks/2022-12-12-lesson8.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m#Too long Stoper\u001b[39;00m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -381,80 +375,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is a simulation of the game hangman: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "would you like to be x or o?\n",
-      "you are x\n",
-      "use this as a guide for which location you would like to place your marker at:\n",
-      "['1A', '1B', '1C']\n",
-      "['2A', '2B', '2C']\n",
-      "['3A', '3B', '3C']\n",
-      "\n",
-      "[['1A', '1B', '1C'], ['2A', '2B', '2C'], ['3A', '3B', '3C']]\n",
+      "player 1: pick a word\n",
       "\n",
       "current board\n",
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n"
+      "['-', '-', '-']\n",
+      "player 2, pick a letter\n",
+      "your choice: f\n",
+      "that letter is not in this word!\n",
+      "\n",
+      "\n",
+      "current board\n",
+      "['-', '-', '-']\n",
+      "player 2, pick a letter\n",
+      "your choice: c\n",
+      "\n",
+      "current board\n",
+      "['c', '-', '-']\n",
+      "player 2, pick a letter\n",
+      "your choice: a\n",
+      "\n",
+      "current board\n",
+      "['c', 'a', '-']\n",
+      "player 2, pick a letter\n",
+      "your choice: t\n",
+      "game over, you guessed the word!\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "import random \n",
+    "import sys\n",
     "\n",
-    "#player choosing x or o:\n",
-    "print(\"would you like to be x or o?\")\n",
-    "sign_choice = str(input(\"would you like to be x or o?\"))\n",
-    "if sign_choice == \"x\":\n",
-    "    n = \"x\"\n",
-    "    print(\"you are x\")\n",
-    "elif sign_choice == \"o\":\n",
-    "    n = \"o\"\n",
-    "    print(\"you are o\")\n",
-    "else: \n",
-    "    print(\"input not valid\")\n",
+    "#picking a word:\n",
+    "print(\"player 1: pick a word\")\n",
+    "word = input(\"\").lower()\n",
+    "blank = \"-\" \n",
     "\n",
-    "#showing player board locations so that user can pick \n",
-    "board_locations = [[\"1A\", \"1B\", \"1C\"],\n",
-    "                   [\"2A\", \"2B\", \"2C\"],\n",
-    "                   [\"3A\", \"3B\", \"3C\"]]\n",
-    "print(\"use this as a guide for which location you would like to place your marker at:\")\n",
-    "for q in board_locations:\n",
-    "    print(q)\n",
-    "print(\"\")\n",
+    "#defining variables\n",
+    "MAX_WRONG_GUESS = 5 #max amount of wrong guesses allowed\n",
+    "letters = list(word) #separating all letters into a separate index in a new list\n",
+    "wrong_guess = 0 #total amount of wrong guesses done\n",
     "\n",
-    "\n",
-    "tic_tac_toe = [[0] * 3] * 3 #empty array to track where markers have been placed\n",
-    "available = board_locations\n",
-    "\n",
-    "def current_board():\n",
+    "#empty list used to show progress.. anytime a correct letter is guessed, the dashes will change to that letter\n",
+    "guesses = [] \n",
+    "for n in letters:\n",
+    "    guesses.append(\"-\")\n",
+    "    \n",
+    "#procedure used to show board after every change\n",
+    "def progress():\n",
     "    print(\"\")\n",
     "    print(\"current board\")\n",
-    "    for r in tic_tac_toe:\n",
-    "        print(r)\n",
-    "\n",
-    "\n",
-    "current_board()\n",
-    "\n",
-    "def play1():\n",
-    "    print(\"where would you like to place your marker?\")\n",
-    "    chosen_place = str(input())\n",
-    "    for w in available:\n",
-    "        if chosen_place == w:\n",
+    "    print(str(guesses))\n",
+    "        \n",
     "            \n",
-    "\n"
+    "\n",
+    "#procedure for guessing a letter\n",
+    "def round():\n",
+    "    global wrong_guess #global makes it so that a variable defined earlier can also be used in this function\n",
+    "    global guesses\n",
+    "    print(\"player 2, pick a letter\") #player picks letter\n",
+    "    choice = input(\"\")\n",
+    "    print(\"your choice:\", choice)\n",
+    "    n = 0 \n",
+    "    found = 0\n",
+    "    for a in letters:\n",
+    "        if choice == letters[n]:\n",
+    "            guesses[n] = choice\n",
+    "            found = 1 \n",
+    "        n = n + 1\n",
+    "    if ( found == 0 ): #if the guessed letter is not found in the word\n",
+    "        wrong_guess = wrong_guess + 1 \n",
+    "        print(\"that letter is not in this word!\")\n",
+    "        print(\"\")\n",
+    "    \n",
+    "\n",
+    "while (wrong_guess < MAX_WRONG_GUESS ):\n",
+    "    progress()\n",
+    "    round()\n",
+    "    if blank not in guesses: #checks to see if the word has been correctly guessed\n",
+    "        print(\"game over, you guessed the word!\")\n",
+    "        sys.exit() #this command will result in a traceback error, however exit() and quit() were not working\n",
+    "if ( wrong_guess >= MAX_WRONG_GUESS) : #if max amount of incorrect guesses allowed had been reached\n",
+    "    print(\"too many wrong guesses.. game over :(\") \n",
+    "    print(\"the correct word was:\", word)  \n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**I could not figure out how to exit the code without using SystemExit, which results in a traceback error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of a simulation in a video game: "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -468,12 +516,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "0f949f575de49a1a8cd4f0d30b0da0a6a4839cc972748a1d0962ff07d579e36d"
    }
   }
  },
