--- a/_notebooks/2022-07-12-unit3vocab.ipynb
+++ b/_notebooks/2022-07-12-unit3vocab.ipynb
@@ -303,31 +303,128 @@
     "\n",
     "Tables used to organize different possible combinations and whether they would be true or not based on the given parameters: \n",
     "\n",
-    "Ex: A is true, B is false\n",
+    "*Note: Binary can be used to represent T of F as well -- 0 is F and 1 is T\n",
     "\n",
-    "*find example later -- cant find which section talked about it*\n",
+    "- **AND truth tables:** Both A AND B must be true for the overall operation to be true\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "| A | B | Outcome | \n",
+    "| - | - | - | \n",
+    "| F | F | F |  \n",
+    "| F | T | F | \n",
+    "| T | F | F | \n",
+    "| T | T | T |\n",
+    "\n",
+    "- **OR truth tables:** Either A OR B must be true for the overall operation to be true\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "| A | B | Outcome | \n",
+    "| - | - | - | \n",
+    "| F | F | F |  \n",
+    "| F | T | T | \n",
+    "| T | F | T | \n",
+    "| T | T | T |\n",
+    "\n",
+    "- **XOR truth tables:** Either A OR B must be true for the overall operation to be true, except if both are true then the overall outcome is F again\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "| A | B | Outcome | \n",
+    "| - | - | - | \n",
+    "| F | F | F |  \n",
+    "| F | T | T | \n",
+    "| T | F | T | \n",
+    "| T | T | F |\n",
+    "\n",
+    "<br>\n",
     "\n",
     "Lessons that discuss this: \n",
-    "?\n",
+    "- Mr. Mort's lesson.. Week 2\n",
     "\n",
     "<br> \n",
     "\n",
-    "# Characters [not talked about yet]\n",
+    "# Characters \n",
+    "\n",
+    "** Not talked about yet ** \n",
+    "\n",
+    "A letter.. Python does not have a separate data type for characters, so single letters will still be considered a string (or a variable if its used for that)\n",
+    "\n",
+    "<br>\n",
     "\n",
     "# Strings: \n",
     "\n",
     "A string is a type of value, that includes text. Strings are usually denoted by surrounding the text in quotation marks. Even numbers can be classified as strings if they're put in quotation marks\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = \"hello\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lessons that discuss this:\n",
     "- Lesson 1\n",
     "\n",
     "<br> \n",
     "\n",
-    "# Length [not talked about yet]\n",
+    "# Length:\n",
+    "\n",
+    "The function len() returns the amount of characters in a string. This can also be used for variables that have a string value.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"supercalifragilisticexpialidocious\") #this word has 34 characters, so the function should print 34"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lessons that talk about this: \n",
+    "- none\n",
+    "\n",
+    "<br>\n",
     "\n",
     "# Concatenation: \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "string1 = \"book\"\n",
+    "string2 = \"case\"\n"
    ]
   }
  ],
