--- a/_notebooks/2022-12-12-lesson8.ipynb
+++ b/_notebooks/2022-12-12-lesson8.ipynb
@@ -498,6 +498,15 @@
    "source": [
     "### Example of a simulation in a video game: "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![simulation example image](shorthike.jpg)\n",
+    "\n",
+    "This is a screenshot from a video game, where you have to hit the ball with the stick across the net. This counts as a simulation, because the game predicts where the ball would land in real life based on the angle that you hit the ball in. On top of that, the ball bounces and interacts with the environment, which are more examples of a simulation."
+   ]
   }
  ],
  "metadata": {
