--- a/_notebooks/2022-08-28-toolinstallation.ipynb
+++ b/_notebooks/2022-08-28-toolinstallation.ipynb
@@ -15,14 +15,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -88,7 +96,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -129,7 +141,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -161,7 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -203,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,7 +268,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -316,7 +344,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -368,14 +400,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
+   "name": "python",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
