--- a/_notebooks/2023-01-09-scoringblog.ipynb
+++ b/_notebooks/2023-01-09-scoringblog.ipynb
@@ -8,7 +8,7 @@
     "# College Board Scoring Assignment \n",
     "\n",
     "- title: College Board Scoring Assignment\n",
-    "- toc: true\n",
+    "- toc: false\n",
     "- badges: false\n",
     "- categories: []"
    ]
@@ -29,16 +29,47 @@
     "| 5: Algorithm Implementation | 1 | Response 3c describes how the algorithm includes sequencing, iteration, and selection (<strong>College Board score: 1 </strong>) |\n",
     "| 6: Testing | 1 | The student describes what inputs are being added, why those specific inputs were chosen and what they are meant to test, and the outputs (<strong>College Board score: 1 </strong>) | \n",
     "\n",
-    "<br>\n",
     "\n",
     "### Overall Score: 5/6 \n",
-    "\n",
-    "<br>\n",
     "\n",
     "### Differences Between My Score and College Board: \n",
     "\n",
     "- Row 3: I gave the student a 1, while College Board gave them a 0. This is because the list was not necessary for the program, and the explanation given for what would be done without the list is incomplete \n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Student 2: \n",
+    "\n",
+    "| Row: Category | My Score | Notes | \n",
+    "| - | - | - | \n",
+    "| 1: Program Purpose and Function | 1 | The student included both the function and the purpose of the game that they made. They also wrote specific inputs that must be given to achieve certain outputs (<strong>College Board score: 1 </strong>)| \n",
+    "| 2: Data Abstraction | 1 | The student included both the list and comments with the purpose of the list. The name and what the list contains also is written (<strong>College Board score: 1 </strong>)|\n",
+    "| 3: Managing Complexity | 1 | The student mentions how there are 10,800 items to be kept track of, which would be practically impossible to do without a list.  (<strong>College Board score: 1 </strong>) | \n",
+    "| 4: Procedural Abstraction | 1 | A procedure is shown being defined, and the response shows all the times it is called. The student also writes what the procedure does | \n",
+    "| 5: Algorithm Implementation | 1 | Sequencing , iteration, and selection are shown in the algorithm, and fully explained in the response | \n",
+    "| 6: Testing | 1 | Two different sets of inputs are given, and the conditions that those inputs are testing is specified | \n",
+    "\n",
+    "### Overall Scrore : 6/6\n",
+    "\n",
+    "### Differences Between My Score and College Board: \n",
+    "none \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Takeaways: \n",
+    "\n",
+    "- Pay special attention to the differences between program and purpose\n",
+    "- The function of everything (lists, procedures, algorithms) have to be written out \n",
+    "- The list included in the written response has to be completely necessary"
    ]
   }
  ],
