--- a/_notebooks/2022-90-26-javascriptusage.ipynb
+++ b/_notebooks/2022-90-26-javascriptusage.ipynb
@@ -153,7 +153,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "python",
-   "version": "3.10.6"
+   "version": "3.10.6 (v3.10.6:9c7b4bd164, Aug  1 2022, 17:13:48) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
