--- a/_notebooks/2023-01-16-scoring2.ipynb
+++ b/_notebooks/2023-01-16-scoring2.ipynb
@@ -70,19 +70,19 @@
     "\n",
     "| Row: Category | My Score | Notes | \n",
     "| - | - | - | \n",
-    "| 1: Program Purpose and Function | 0 | The purpose that was written was actually the function (<strong>College Board score: 0 </strong>)| \n",
-    "| 2: Data Abstraction | 1 | The list firstCharacterList is named and the type of data stored in the list is described(<strong>College Board score: 1 </strong>)| \n",
-    "| 3: Managing Complexity | 1 | Says how the list decreases complexity, and what would have happened if the list had not been used  (<strong>College Board score: 1 </strong>)| \n",
-    "| 4: Procedural Abstraction | 1 | The code defining the procedure is shown, and the code calling it is included as well. The response talks about how the procedure is needed for the overall function of the program  (<strong> College Board score: 1 </strong>) | \n",
-    "| 5: Algorithm Implementation | 0 | Only one parameter is mentioned (<strong>College Board score: 1 </strong>) |\n",
-    "| 6: Testing | 1 | Two different instances are tested, one where one character has the higher average than the other, and one where there is a tie. The response shows how the output matches the description.(<strong>College Board score: 1 </strong>) | \n",
+    "| 1: Program Purpose and Function | 1 | The function is shown in the video and the purpose is specified (<strong>College Board score: 1 </strong>)| \n",
+    "| 2: Data Abstraction | 0 | Two sets of code are given, but while one of them shows a list being created, none of the code segments show the list being used in the actual program(<strong>College Board score: 0 </strong>)| \n",
+    "| 3: Managing Complexity | 1 | The response explains how the list can be used to manage complexity(<strong>College Board score: 0 </strong>)| \n",
+    "| 4: Procedural Abstraction | 0 | The code defining the procedure is shown, but there is no code calling the procedure  (<strong> College Board score: 0 </strong>) | \n",
+    "| 5: Algorithm Implementation | 0 | There is no iteration in the procedure (<strong>College Board score: 0 </strong>) |\n",
+    "| 6: Testing | 0 | The two different sitatuations being tested by the calls given are not explained(<strong>College Board score: 0 </strong>) | \n",
     "\n",
     "\n",
-    "### Overall Score: 4/6 \n",
+    "### Overall Score: 2/6 \n",
     "\n",
     "### Differences Between My Score and College Board: \n",
     "\n",
-    "- Row 5: There are two parameters. Each of the characters count as one parameter\n",
+    "- Row 3: The explanation for managing complexity is vague and isnt specific to this project\n",
     "\n"
    ]
   },
