--- a/_notebooks/2023-01-24-unitlecturenotes.ipynb
+++ b/_notebooks/2023-01-24-unitlecturenotes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Units 5.1 and 5.2 Notes\n",
     "\n",
-    "- title: Units 5.1 an 5.2 Notes\n",
+    "- title: Units 5.1 and 5.2 Notes\n",
     "- toc: false\n",
     "- badges: false\n",
     "- categories: []"
