--- a/_posts/2023-02-01-unit5.4.md
+++ b/_posts/2023-02-01-unit5.4.md
@@ -43,3 +43,6 @@ Night at the Museum is a great opportunity for crowdsourcing, since many people 
 Our project could benefit from crowdsourcing by fixing the timer to include more time, based on how long people take to complete the puzzle on average. Another feature improved by crowdsourcing could be picking more recognizable logos for the cards in the card matching game. 
 
 * What kind of data could you capture at N@tM to make evening interesting?  Perhaps use this data to impress Teachers during finals week.
+
+Some data we could capture is how long people stay interested in our game. We can use that to determine how long our game should run for. We may even add different options for how long the game runs for that the user can pick from. 
+
