--- a/_notebooks/2023-03-07-AP-unit2-2.ipynb
+++ b/_notebooks/2023-03-07-AP-unit2-2.ipynb
@@ -33,7 +33,7 @@
     "## Image Files and Size\n",
     "> Here are some [Images Files](https://github.com/nighthawkcoders/nighthawk_csp/tree/master/starter/static/img).  Download these files, load them into `images` directory under **_notebooks** in your Blog. \n",
     "  \n",
-    "![](smily.png)\n",
+    "![image](https://user-images.githubusercontent.com/111466888/223841033-e58b6c2c-28aa-44a2-828c-c55adbd55564.png)\n",
     "\n",
     "- [Clouds Impression](https://github.com/nighthawkcoders/APCSP/blob/master/_notebooks/images/clouds-impression.png)\n",
     "- [Lassen Volcano](https://github.com/nighthawkcoders/APCSP/blob/master/_notebooks/images/lassen-volcano.jpg)\n",
