--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -1237,8 +1237,7 @@
    ],
    "source": [
     "from IPython.display import Image, display\n",
-    "from pathlib import Path  # https://medium.com/@ageitgey/python-3-quick-tip-the-easy-way-to-deal-with-file-paths-on-windows-mac-and-linux-11a072b58d5f\n",
-    "\n",
+    "from pathlib import Path \n",
     "path = Path(\"images/\") #sets path to /_notebook/images\n",
     "def image_display(image): \n",
     "    image['filename'] = path / image['file'] #sets path to image file\n",
